# coreclr

./: .gitignore  CMakeLists.txt
src/System.Private.CoreLib/shared/System/Diagnostics/Tracing/: ActivityTracker.cs
src/System.Private.CoreLib/shared/System/Resources/: ResourceReader.cs
src/System.Private.CoreLib/src/Internal/Runtime/Augments/: RuntimeThread.cs
src/System.Private.CoreLib/src/System/Runtime/CompilerServices/: AsyncMethodBuilder.cs
src/System.Private.CoreLib/src/System/Threading/: Thread.cs
src/corefx/System.Globalization.Native/: pal_calendarData.c  pal_collation.c  pal_localeStringData.c
src/dlls/mscoree/: mscorwks_ntdef.src  mscorwks_unixexports.src
src/dlls/mscoree/coreclr/: CMakeLists.txt
src/inc/: CrstTypes.def  crsttypes.h
src/vm/: CMakeLists.txt  assemblynative.hpp  ecall.cpp  ecall.h  eeconfig.cpp  methodtable.h
src/vm/amd64/: asmconstants.h
src/vm/mono/: CMakeLists.txt  MonoCoreClr.h  MonoFunctions.h  MonoFunctionsClr.h  MonoObjectRef.cpp  MonoObjectRef.h  MonoTypes.h  MonoTypesClr.h  mono_coreclr.cpp  mono_test.cpp
unity/coreclr-test/: Makefile  build_coreclr.cmd  build_net45.cmd  coreclr-test.csproj  test.cs
unity/mono-proxy/: MonoProxyCodeGen.sln  readme.md
unity/mono-proxy/MonoProxyCodeGen/: MonoFunctionsProxy.h  MonoProxyCodeGen.csproj  Program.cs
unity/mono-proxy/MonoProxyCodeGen/Properties/: AssemblyInfo.cs
unity/mono-proxy/mono-proxy/: CMakeLists.txt  monoproxy.cpp  monoproxy.h
unity/simple-app/: CMakeLists.txt  build.sh  build_and_run.sh  copy.sh  main.cpp
